--- a/PRNFE.MVC/Views/Services/Index.cshtml
+++ b/PRNFE.MVC/Views/Services/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<PRNFE.MVC.Models.Response.ServiceResponse>
+﻿@model List<PRNFE.MVC.Models.Response.ServiceResponses>
 @{
     ViewData["Title"] = "Quản lý dịch vụ";
 }
