--- a/PRNFE.MVC/Views/Services/Edit.cshtml
+++ b/PRNFE.MVC/Views/Services/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model PRNFE.MVC.Models.Request.UpdateServiceRequest
+﻿@model PRNFE.MVC.Models.Request.UpdateServiceRequest
 
 @{
     ViewData["Title"] = "Chỉnh sửa dịch vụ";
