--- a/PRNFE.MVC/Views/Services/Filter.cshtml
+++ b/PRNFE.MVC/Views/Services/Filter.cshtml
@@ -1,5 +1,4 @@
-
-﻿@model PRNFE.MVC.Models.Request.FilterServiceRequest
+@model PRNFE.MVC.Models.Request.FilterServiceRequest
 
 @{
     ViewData["Title"] = "Lọc và tìm kiếm dịch vụ";
@@ -322,4 +321,3 @@
         }
     </script>
 }
-
