login with landlord

--- a/PRNFE.MVC/Views/Landlord/DormitoryManagement.cshtml
+++ b/PRNFE.MVC/Views/Landlord/DormitoryManagement.cshtml
@@ -94,6 +94,36 @@
     </div>
 </div>
 
+<div class="container mt-5">
+    <h2>Dashboard quản lý trọ</h2>
+    <div class="row mt-4">
+        <div class="col-md-4">
+            <a href="/Landlord/ServiceManagement" class="card text-center shadow-sm p-4" style="text-decoration:none;">
+                <div class="card-body">
+                    <i class="fas fa-bolt fa-3x mb-2"></i>
+                    <h4>Quản lý điện nước</h4>
+                </div>
+            </a>
+        </div>
+        <div class="col-md-4">
+            <a href="/Landlord/RoomManagement" class="card text-center shadow-sm p-4" style="text-decoration:none;">
+                <div class="card-body">
+                    <i class="fas fa-door-open fa-3x mb-2"></i>
+                    <h4>Quản lý phòng trọ</h4>
+                </div>
+            </a>
+        </div>
+        <div class="col-md-4">
+            <a href="/Landlord/TenantManagement" class="card text-center shadow-sm p-4" style="text-decoration:none;">
+                <div class="card-body">
+                    <i class="fas fa-users fa-3x mb-2"></i>
+                    <h4>Quản lý dân cư</h4>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
+
 <!-- Add Dormitory Modal -->
 <div class="modal fade" id="addDormitoryModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
