--- a/PRNFE.MVC/Views/TemporaryStays/Index.cshtml
+++ b/PRNFE.MVC/Views/TemporaryStays/Index.cshtml
@@ -5,9 +5,13 @@
 @{
     ViewData["Title"] = "TemporaryStay";
     var cookieValue = HttpContextAccessor.HttpContext?.Request.Cookies["AccessToken"];
+    var filterModel = new FilterTemporaryStayDto();
 }
 
 <h1>TemporaryStay</h1>
+
+@Html.Partial("_Filter", filterModel)
+
 <table class="table">
     <thead>
         <tr>
@@ -38,44 +42,51 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Resident.FullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FromDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ToDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Note)
-            </td>
-            <td>
-               
-                @Enum.GetName(typeof(TemporaryStayResponse.TemporaryStayStatus), item.Status)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
-            </td>
-            <td>
-                @if (JwtTokenHelper.IsLandlord(cookieValue))
-                    {
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn" })
-                    }
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn" })
-            </td>
-        </tr>
-}
-    </tbody>
+    @if(Model != null && Model.Any()){
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Resident.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FromDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ToDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Note)
+                    </td>
+                    <td>
+
+                        @Enum.GetName(typeof(TemporaryStayResponse.TemporaryStayStatus), item.Status)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreateAt)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UpdatedAt)
+                    </td>
+                    <td>
+                        @if (JwtTokenHelper.IsLandlord(cookieValue))
+                        {
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn" })
+                        }
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn" })
+                    </td>
+                </tr>
+            }
+        </tbody>
+    }
+    else{
+        <p>Không có dữ liệu</p>
+    }
+    
 </table>
 
 <style>
