--- a/PRNFE.MVC/Views/Shared/_Header.cshtml
+++ b/PRNFE.MVC/Views/Shared/_Header.cshtml
@@ -93,7 +93,7 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="@Url.Action("UpdateProfile", "User")">
                                 <i class="fas fa-user me-2"></i>
                                 Thông tin cá nhân
                             </a>
