--- a/PRNFE.MVC/Views/Resident/Index.cshtml
+++ b/PRNFE.MVC/Views/Resident/Index.cshtml
@@ -17,6 +17,10 @@
                             Danh sách cư dân (@(Model?.Data?.Count ?? 0))
                         </h5>
                         <div>
+                            <a href="/Vehicle/Index" class="btn btn-light btn-sm">
+                                <i class="fas fa-plus me-1"></i>
+                               Quản lý phương tiện
+                            </a>
                             <a href="@Url.Action("Create", "Resident")" class="btn btn-light btn-sm">
                                 <i class="fas fa-plus me-1"></i>
                                 Thêm cư dân mới
