--- a/PRNFE.MVC/Views/Rooms/Details.cshtml
+++ b/PRNFE.MVC/Views/Rooms/Details.cshtml
@@ -581,7 +581,7 @@
                             </div>
                             <div class="card-body center-black">
                                 <h6>@currentRoomType.Name</h6>
-                                <p class="text-muted small">@currentRoomType.Description</p>
+                               @* <p class="text-muted small">@currentRoomType.Description</p> *@
                             </div>
                         </div>
                     }
