--- a/PRNFE.MVC/Views/Services/Index.cshtml
+++ b/PRNFE.MVC/Views/Services/Index.cshtml
@@ -71,6 +71,10 @@
                     <a href="@Url.Action("Create", "Services")" class="btn btn-pink">
                         <i class="fas fa-plus"></i> Thêm dịch vụ mới
                     </a>
+
+                    <a href="/Bill/Index" class="btn btn-pink">
+                        <i class="fas fa-plus"></i> Quản lý hóa đơn
+                    </a>
                 </div>
             </div>
 
