--- a/PRNFE.MVC/Views/Shared/_Layout.cshtml
+++ b/PRNFE.MVC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - TroManager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
     <link href="~/css/glassmorphism.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
     <!-- Select2 CSS -->
