--- a/PRNFE.MVC/Views/Tenant/InvoiceInfo.cshtml
+++ b/PRNFE.MVC/Views/Tenant/InvoiceInfo.cshtml
@@ -4,6 +4,12 @@
 }
 
 <div class="container-fluid">
+
+
+    @section TenantQuickActions {
+        @await Html.PartialAsync("_TenantQuickActions")
+    }
+
     <div class="row">
         <div class="col-12">
             <div class="card">
