--- a/PRNFE.MVC/Views/Shared/_Layout.cshtml
+++ b/PRNFE.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="utf-8" />
@@ -6,6 +6,11 @@
     <title>@ViewData["Title"] - TroManager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Đặt ở trước </body> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <link href="~/css/glassmorphism.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
@@ -21,6 +26,10 @@
             </div>
         }
         
+        @RenderSection("TenantQuickActions", required: false)
+        @RenderSection("ToastMessage", required: false)
+
+
         @RenderBody()
     </main>
 
