--- a/PRNFE.MVC/Views/Services/Details.cshtml
+++ b/PRNFE.MVC/Views/Services/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model PRNFE.MVC.Models.Response.DetailServiceResponse
+﻿@model PRNFE.MVC.Models.Response.DetailsServiceResponse
 
 @{
     ViewData["Title"] = "Chi tiết dịch vụ";
