--- a/PRNFE.MVC/Views/Rooms/Details.cshtml
+++ b/PRNFE.MVC/Views/Rooms/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model PRNFE.MVC.Models.Response.DetailRoomResponse
+﻿@model PRNFE.MVC.Models.Response.DetailsRoomResponse
 @using PRNFE.MVC.Controllers
 @{
     ViewData["Title"] = "Chi tiết phòng";
