--- a/PRNFE.MVC/Views/Landlord/DormitoryManagement.cshtml
+++ b/PRNFE.MVC/Views/Landlord/DormitoryManagement.cshtml
@@ -24,6 +24,15 @@
                 </a>
             </div>
             <div class="col d-flex justify-content-center">
+                <a href="/Vehicle/Index" class="card text-center text-decoration-none shadow-sm p-4 h-100 w-100 bg-light border-0">
+                    <div class="card-body">
+                        <i class="fas fa-car fa-3x text-success mb-3"></i>
+                        <h5 class="card-title fw-semibold text-dark">Quản lý phương tiện</h5>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col d-flex justify-content-center">
                 <a href="/Resident/Index" class="card text-center text-decoration-none shadow-sm p-4 h-100 w-100 bg-light border-0">
                     <div class="card-body">
                         <i class="fas fa-users fa-3x text-info mb-3"></i>
