--- a/PRNFE.MVC/Views/Shared/_Header.cshtml
+++ b/PRNFE.MVC/Views/Shared/_Header.cshtml
@@ -95,9 +95,9 @@
                         @if (isAdmin)
                         {
                             <li>
-                                <a class="dropdown-item" href="@Url.Action("UserManagement", "Admin")">
-                                    <i class="fas fa-users-cog me-2"></i>
-                                    Quản lý người dùng
+                                <a class="dropdown-item" href="@Url.Action("Dashboard", "Admin")">
+                                    <i class="fas fa-shield-alt me-2"></i>
+                                    Admin Dashboard
                                 </a>
                             </li>
                             <li><hr class="dropdown-divider"></li>
