--- a/PRNFE.MVC/Views/Services/Index.cshtml
+++ b/PRNFE.MVC/Views/Services/Index.cshtml
@@ -1,4 +1,4 @@
-@model List<PRNFE.MVC.Models.Response.ServiceResponses>
+@model List<PRNFE.MVC.Models.Response.ServiceResponse>
 
 @{
     ViewData["Title"] = "Quản lý dịch vụ";
