--- a/PRNFE.MVC/Views/Landlord/DormitoryManagement.cshtml
+++ b/PRNFE.MVC/Views/Landlord/DormitoryManagement.cshtml
@@ -7,11 +7,20 @@
     <h2>Dashboard quản lý trọ</h2>
     <div class="container mt-4">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 justify-content-center">
+           
             <div class="col d-flex justify-content-center">
                 <a href="/Services/Index" class="card text-center text-decoration-none shadow-sm p-4 h-100 w-100 bg-light border-0 hover-shadow">
                     <div class="card-body">
                         <i class="fas fa-bolt fa-3x text-primary mb-3"></i>
                         <h5 class="card-title fw-semibold text-dark">Quản lý dịch vụ</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <a href="/Building/Index" class="card text-center text-decoration-none shadow-sm p-4 h-100 w-100 bg-light border-0 hover-shadow">
+                    <div class="card-body">
+                        <i class="fas fa-building fa-3x text-primary mb-3"></i>
+                        <h5 class="card-title fw-semibold text-dark">Quản lý tòa nhà</h5>
                     </div>
                 </a>
             </div>
